--- a/2023_08.md
+++ b/2023_08.md
@@ -1,38 +1,20 @@
-8/1<br>
-<br>
-
 8/2<br>
-<br>
+Railsチュートリアル第6章<br>
 
 8/3<br>
-<br>
+管理者権限機能の課題<br>
 
 8/4<br>
-<br>
-
-8/5<br>
-<br>
-
-8/6<br>
-<br>
-
-8/7<br>
-<br>
-
-8/8<br>
-<br>
+管理者権限機能の課題<br>
 
 8/9<br>
-<br>
+管理者権限機能の課題<br>
 
 8/10<br>
-<br>
-
-8/11<br>
-<br>
+Railsチュートリアル第7章、JSハンズオン<br>
 
 8/12<br>
-<br>
+ミニプリ「君の恋人になれたら」を作成<br>
 
 8/13<br>
 <br>
