--- a/2023_08.md
+++ b/2023_08.md
@@ -14,7 +14,62 @@ Railsチュートリアル第6章<br>
 Railsチュートリアル第7章、JSハンズオン<br>
 
 8/12<br>
-ミニプリ「君の恋人になれたら」を作成<br>
+青春がテーマのミニアプリを作成<br>
+https://github.com/satou-haruka-37/kiminokoibito<br>
 
 8/13<br>
+JavaScript、RSpec<br>
+
+8/14<br>
+<br>
+
+8/15<br>
+<br>
+
+8/16<br>
+<br>
+
+8/17<br>
+<br>
+
+8/18<br>
+<br>
+
+8/19<br>
+<br>
+
+8/20<br>
+<br>
+
+8/21<br>
+<br>
+
+8/22<br>
+<br>
+
+8/23<br>
+<br>
+
+8/24<br>
+<br>
+
+8/25<br>
+<br>
+
+8/26<br>
+<br>
+
+8/27<br>
+<br>
+
+8/28<br>
+<br>
+
+8/29<br>
+<br>
+
+8/30<br>
+<br>
+
+8/31<br>
 <br>
