--- a/2023_08.md
+++ b/2023_08.md
@@ -29,29 +29,8 @@ RSpecのセットアップ、モデルスペック<br>
 8/16<br>
 Railsチュートリアル第8章、<br>
 
-8/17<br>
-<br>
-
-8/18<br>
-<br>
-
-8/19<br>
-<br>
-
-8/20<br>
-<br>
-
-8/21<br>
-<br>
-
-8/22<br>
-<br>
-
-8/23<br>
-<br>
-
 8/24<br>
-<br>
+Railsチュートリアル第9章<br>
 
 8/25<br>
 <br>
