--- a/2023_09.md
+++ b/2023_09.md
@@ -1,32 +1,53 @@
 9/2<br>
 RSpec　システムスペック<br>
 
-9/4<br>
-<br>
-
 9/5<br>
-<br>
-
-9/6<br>
-<br>
-
-9/7<br>
-<br>
-
-9/8<br>
-<br>
-
-9/9<br>
-<br>
-
-9/10<br>
-<br>
-
-9/11<br>
-<br>
-
-9/12<br>
-<br>
+RSpec　システムスペック<br>
 
 9/13<br>
+Railsチュートリアル第10章のRSpec修正、ailsチュートリアル第11章の途中まで<br>
+
+9/14<br>
+<br>
+
+9/15<br>
+<br>
+
+9/16<br>
+<br>
+
+9/17<br>
+<br>
+
+9/20<br>
+<br>
+
+9/21<br>
+<br>
+
+9/22<br>
+<br>
+
+9/23<br>
+<br>
+
+9/24<br>
+<br>
+
+9/25<br>
+<br>
+
+9/26<br>
+<br>
+
+9/27<br>
+<br>
+
+9/28<br>
+<br>
+
+9/29<br>
+<br>
+
+9/30<br>
 <br>
