--- a/2023_09.md
+++ b/2023_09.md
@@ -5,10 +5,11 @@ RSpec　システムスペック<br>
 RSpec　システムスペック<br>
 
 9/13<br>
-Railsチュートリアル第10章のRSpec修正、ailsチュートリアル第11章の途中まで<br>
+Railsチュートリアル第10章のRSpec修正、Railsチュートリアル第11章の途中まで<br>
 
 9/14<br>
-<br>
+Railsチュートリアル第11章、第12章、第13章、第14章<br>
+ほとんど写経、全体像の把握<br>
 
 9/15<br>
 <br>
