--- a/2023_09.md
+++ b/2023_09.md
@@ -23,14 +23,8 @@ Webアプリアイデア壁打ち、システムスペック<br>
 9/21<br>
 システムスペック<br>
 
-9/22<br>
-<br>
-
-9/23<br>
-<br>
-
 9/24<br>
-<br>
+システムスペック、<br>
 
 9/25<br>
 <br>
