--- a/2023_09.md
+++ b/2023_09.md
@@ -24,10 +24,10 @@ Webアプリアイデア壁打ち、システムスペック<br>
 システムスペック<br>
 
 9/24<br>
-システムスペック、<br>
+システムスペック、RSpecの修正、基礎総復習<br>
 
 9/25<br>
-<br>
+基礎総復習、<br>
 
 9/26<br>
 <br>
