--- a/2023_09.md
+++ b/2023_09.md
@@ -26,11 +26,8 @@ Webアプリアイデア壁打ち、システムスペック<br>
 9/24<br>
 システムスペック、RSpecの修正、基礎総復習<br>
 
-9/26<br>
-基礎総復習、<br>
-
 9/27<br>
-<br>
+基礎総復習<br>
 
 9/28<br>
 <br>
