--- a/daily/2023_08/2023_08_12.md
+++ b/daily/2023_08/2023_08_12.md
@@ -6,3 +6,5 @@
 GPTと二人三脚で、作るの4時間半、絵描くの2時間半、デプロイ2時間くらいでした。<br>
 イラストもコードもイメージしてた百倍くらいクオリティ低いけど、<br>
 思い描いていたものが形になったのでよかった☺️<br>
+
+[青春がテーマのミニアプリ](https://github.com/satou-haruka-37/kiminokoibito)
