--- a/daily/2023_09/2023_09_30.md
+++ b/daily/2023_09/2023_09_30.md
@@ -1,1 +1,8 @@
-
+**今日やったこと**
+【学習時間】3時間6分/日<br>
+【内容】<br>
+・GitHub Pages作ってた（学習時間外）<br>
+・基礎STEP 総復習 クイズ<br>
+・中間試験 テーブル設計（提出）<br>
+【振り返り・明日の目標】<br>
+テーブル設計戻されそう<br>
