--- a/monthly/2023_10.md
+++ b/monthly/2023_10.md
@@ -3,7 +3,7 @@
 計：540時間4分<br>
 
 **【9月の振り返り】**<br>
-イベント落ち着いて学習習慣が途切れて、落ちぶれていた。<br>
+イベントが続いて学習習慣が途切れて、落ちぶれていた。<br>
 雲隠れしようとしてたら気にかけて声かけてくれる同期や<br>
 全力で共感してくれる女子会の存在が大きくて<br>
 また頑張れる🥺🙌🏻<br>
