--- a/daily/2023_10/2023_10_03.md
+++ b/daily/2023_10/2023_10_03.md
@@ -1,1 +1,8 @@
-
+**今日やったこと**<br>
+【学習時間】4時間/日<br>
+【内容】<br>
+・中間試験 Ruby on Rails（途中）<br>
+【振り返り・明日の目標】<br>
+沼ってしまった。<br>
+エラーは嫌なものじゃない、きちんと一つずつ整理すれば良いだけ<br>
+と言い聞かせてやる
