--- a/daily/2023_10/2023_10_17.md
+++ b/daily/2023_10/2023_10_17.md
@@ -1,1 +1,9 @@
-
+**今日やったこと**<br>
+【学習時間】6時間40分/日<br>
+【内容】<br>
+・小さな習慣　58％<br>
+・中間試験 Ruby on Rails（途中）<br>
+・スッキリわかるSQL入門8〜11章<br>
+・タイピング🍦<br>
+【振り返り・明日の目標】<br>
+うーん沼
