--- a/daily/2023_10/2023_10_19.md
+++ b/daily/2023_10/2023_10_19.md
@@ -1,1 +1,11 @@
-
+**今日やったこと**<br>
+【学習時間】8時間4分/日<br>
+【内容】<br>
+・スッキリわかるSQL入門　読了<br>
+・SQLab 一周<br>
+・追加カリキュラムSQL基礎　課題2、課題8<br>
+・中間試験 SQL<br>
+・中間試験 Ruby（途中）<br>
+・タイピング🍦<br>
+【振り返り・明日の目標】<br>
+🐈
