--- a/daily/2023_10/2023_10_20.md
+++ b/daily/2023_10/2023_10_20.md
@@ -1,1 +1,10 @@
-
+**今日やったこと**<br>
+【学習時間】8時間15分/日<br>
+【内容】<br>
+・スッキリわかるJava入門　読了<br>
+・中間試験 SQL差し戻し修正<br>
+・中間試験 Ruby　<br>
+・中間試験 Ruby on Rails（あと少し）<br>
+・タイピング🍦<br>
+【振り返り・明日の目標】<br>
+あと1つが難しい
