--- a/daily/2023_10/2023_10_22.md
+++ b/daily/2023_10/2023_10_22.md
@@ -1,1 +1,13 @@
-
+**今日やったこと**<br>
+【学習時間】5時間50分/日<br>
+【内容】<br>
+・リーダブルコード　3章〜5章まで<br>
+・中間試験 Ruby on Rails<br>
+・Rails応用　課題1 画像挿入時のバグ修正<br>
+・Rails応用　課題2 パンくずの設定（触りだけ）<br>
+・タイピング🍦<br>
+【振り返り・明日の目標】<br>
+壁を越えたらまた次の壁〜<br>
+応用課題1は記事見つけてしまったから行けたけど<br>
+いきなり複雑なアプリのコードで圧倒されて全然読めない〜<br>
+がんばる
