--- a/weekly/2023_10_23w.md
+++ b/weekly/2023_10_23w.md
@@ -1,11 +1,11 @@
 **【先週の振り返り】**<br>
 学習：中間Rails再提出、Rails応用課題1まで<br>
 CREDO：Take Ownership<br>
-先週言ってた小さな習慣読み終えて、1日2ページ技術書読むor1日1行でもコードを書く、タイピング1回、朝布団から足1本出せればOK、の3つを始めた。<br>
+先週言ってた小さな習慣読み終えて、1日1ページ技術書読むor1日1行でもコードを書く、タイピング1回、朝布団から足1本出せればOK、の3つを始めた。<br>
 5時間勉強しても「まだ7時間やれてない〜」って辛くしかなかったのが無くなった。<br>
 だらしないくせに変に完璧主義で目標高くて落ち込んで勉強しない期間空くぐらいなら、<br>
 本当はもっとした方がいいけど、ちょっとでもいいから続ける方が良いと思った。<br>
-あと分解力みたいな考え方も身に付く本だと思った。<br>
+あと分解力とか、やる気ない時の柔軟に取り組む力も身に付く本だと思った。<br>
 **【今週の目標】**<br>
 学習：応用STEPを進める<br>
 CREDO：Take Ownership<br>
