--- a/daily/2023_10/2023_10_23.md
+++ b/daily/2023_10/2023_10_23.md
@@ -1,1 +1,14 @@
-
+**今日やったこと**<br>
+【学習時間】9時間21分/日<br>
+【内容】<br>
+・リーダブルコード　6章〜9章まで<br>
+・プロダクト開発<br>
+・インフラ入門（任意とAWS以外）<br>
+・Ruby演習　（アルゴリズム演習以外）<br>
+・current_user.一周<br>
+・ActiveRecord演習の環境構築（途中）<br>
+・タイピング🍦<br>
+【振り返り・明日の目標】<br>
+応用Railsから逃げた🏃‍♀️<br>
+Javaの本（オブジェクト指向）とリーダブルコード読んだからか<br>
+Ruby演習は少し入ってきやすかった
