--- a/daily/2023_10/2023_10_24.md
+++ b/daily/2023_10/2023_10_24.md
@@ -1,1 +1,9 @@
-
+**今日やったこと**<br>
+【学習時間】5時間20分/日<br>
+【内容】<br>
+・リーダブルコード　10章〜14章まで<br>
+・Ruby演習　アルゴリズム演習<br>
+・ActiveRecord演習<br>
+・タイピング🍦<br>
+【振り返り・明日の目標】<br>
+ActiveRecord10本ノックの環境構築Docker使った方が良い😭
