--- a/daily/2023_10/2023_10_28.md
+++ b/daily/2023_10/2023_10_28.md
@@ -1,1 +1,9 @@
-
+**今日やったこと**<br>
+【学習時間】4時間30分/日<br>
+【内容】<br>
+・オブジェクト指向でなぜつくるのか２ページ<br>
+・Rails応用　課題5〜7<br>
+・タイピング🍦<br>
+【振り返り・明日の目標】<br>
+出先で用事あり帰る方が時間勿体無かったのでスタバで勉強した<br>
+初めて家以外で勉強して、たまにはこういうのもいいなと思った
