--- a/daily/2023_11/2023_11_13.md
+++ b/daily/2023_11/2023_11_13.md
@@ -1,6 +1,6 @@
-**今日やったこと**
-【学習時間】4時間40分/日
-【内容】
-・オブジェクト指向でなぜつくるのか 2ページ
-・タイピング🍦
+**今日やったこと**<br>
+【学習時間】4時間40分/日<br>
+【内容】<br>
+・オブジェクト指向でなぜつくるのか 2ページ<br>
+・タイピング🍦<br>
 ・Rails応用　課題8〜9着手
