--- a/daily/2023_11/2023_11_16.md
+++ b/daily/2023_11/2023_11_16.md
@@ -1,1 +1,8 @@
-
+**今日やったこと**<br>
+【学習時間】2時間40分/日<br>
+【内容】<br>
+・オブジェクト指向でなぜつくるのか 2ページ<br>
+・タイピング🍦<br>
+・Rails応用　課題9（ギブアップ後エラー、途中）<br>
+【振り返り・明日の目標】<br>
+Active StorageとSwiperにボコボコにされた
