--- a/daily/2023_11/2023_11_21.md
+++ b/daily/2023_11/2023_11_21.md
@@ -1,1 +1,7 @@
-
+**今日やったこと**<br>
+【学習時間】1時間/日<br>
+【内容】<br>
+・オブジェクト指向でなぜつくるのか 2ページ<br>
+・AWSの仕組みとサービスがたった1日でよくわかる (途中)<br>
+・タイピング🍦<br>
+・Rails応用　課題10
