--- a/daily/2023_11/2023_11_22.md
+++ b/daily/2023_11/2023_11_22.md
@@ -1,1 +1,9 @@
-
+**今日やったこと**<br>
+【学習時間】7時間/日<br>
+【内容】<br>
+・AWSの仕組みとサービスがたった1日でよくわかる (ちょっと)<br>
+・AWSを使ってみよう、インフラを構築してみよう<br>
+・AWSでアプリを動かしてみよう（エラー出て途中）<br>
+・応用STEP 総復習クイズ<br>
+・事業をエンジニアリングしよう ①提案　環境構築<br>
+・タイピング🍦
