--- a/daily/2023_11/2023_11_24.md
+++ b/daily/2023_11/2023_11_24.md
@@ -1,1 +1,10 @@
-
+**今日やったこと**<br>
+【学習時間】9時間/日<br>
+【内容】<br>
+・Webアプリボード　READMEを作成しよう　提出中<br>
+・事業をエンジニアリングしよう ②実装　着手<br>
+・タイピング🍦<br>
+【振り返り・明日の目標】<br>
+アプリ名考えるのに時間使いすぎた<br>
+誰よ卒業試験より中間試験の方が難しいって言った人〜😠<br>
+頑張る〜〜
