--- a/daily/2023_11/2023_11_27.md
+++ b/daily/2023_11/2023_11_27.md
@@ -1,1 +1,14 @@
-
+**今日やったこと**<br>
+【学習時間】5時間/日<br>
+【内容】<br>
+・Udemy React(v18)完全入門ガイド　セクション3（途中）<br>
+・Webアプリボード　開発を始める前に<br>
+・過去の疑問　少し復習<br>
+・タイピング🍦<br>
+【振り返り・明日の目標】<br>
+おかげさまで卒業認定もらえました🥳<br>
+おめでとうって言われて実感した<br>
+最近交流系のイベントとか出てないけど、過去にイベントとかで関わったことある方にも久しぶりにリプもらって関われてしみじみした<br>
+いろんな方々にお世話になってきたなぁって<br>
+しみじみしてる暇ないから次に進まないと<br>
+やるぞー🙂🔥
