--- a/daily/2023_11/2023_11_28.md
+++ b/daily/2023_11/2023_11_28.md
@@ -1,1 +1,12 @@
-
+**今日やったこと**<br>
+【学習時間】6時間30分/日<br>
+【内容】<br>
+・Udemy React(v18)完全入門ガイド　セクション3（途中）<br>
+・Webアプリボード　技術選定<br>
+・タイピング🍦<br>
+【振り返り・明日の目標】<br>
+技術選定難難難難難悩悩悩🙃<br>
+<br>
+明日やること<br>
+・Reactセクション3終わらせる<br>
+・技術選定に関する色々調べる＆互換性の調査
