--- a/monthly/2023_12.md
+++ b/monthly/2023_12.md
@@ -1,1 +1,9 @@
-
+**【11月の学習時間】**<br>
+82時間7分/月<br>
+計：722時間21分<br>
+<br>
+**【11月の振り返り】**<br>
+応用編でぐだぐだしてたけど卒業試験やって今後の見通しついて焦って頑張った(今更)<br>
+<br>
+**【12月の目標】**<br>
+ISSUE多すぎて大変なことになったけどアプリ開発頑張る
