--- a/daily/2023_12/2023_12_01.md
+++ b/daily/2023_12/2023_12_01.md
@@ -1,1 +1,8 @@
+**今日やったこと**<br>
+【学習時間】3時間51分/日<br>
+【内容】<br>
+・実践 Docker - ソフトウェアエンジニアの「Docker よくわからない」を終わりにする本　Chapter 06まで<br>
+・Ruby<br>
+【振り返り・明日の目標】<br>
+♨️
 
