--- a/daily/2023_12/2023_12_03.md
+++ b/daily/2023_12/2023_12_03.md
@@ -1,1 +1,11 @@
-
+**今日やったこと**<br>
+【学習時間】11時間/日<br>
+【内容】<br>
+・実践 Docker - ソフトウェアエンジニアの「Docker よくわからない」を終わりにする本　Chapter 12〜21<br>
+・Udemy 駆け出しエンジニアのためのDocker入門　セクション4の途中<br>
+・Dockerの環境構築お試し<br>
+・タイピング🍦<br>
+【振り返り・明日の目標】<br>
+ハンズオンやってみて、ビルドとか設定を全部手動でコマンド使う方法と、<br>
+設定をdocker-compose.ymlファイルに記載しておいてcomposeで一気に実行する方法があって、<br>
+composeのコマンドがあるから他の人のアプリも環境構築なしにすぐ触れるって感じのことがわかった。
