Update and rename 2023_12_4w.md to 2023_12_04w.md

--- a/weekly/2023_12_04w.md
+++ b/weekly/2023_12_04w.md
@@ -3,7 +3,7 @@
 CREDO：Give First<br>
 強いて言えばで、記事の共有など<br>
 **【今週の目標】**<br>
-学習：Google Map APIの調査・導入と、できれば基本ページのビュー作成まで<br>
+学習：Google Map APIの調査・導入と、できればデプロイ・ドメイン取得まで<br>
 CREDO：Take Ownership<br>
 **【他のRUNTEQ生に伝えたいこと・意気込みなど！】**<br>
 ☃️
