--- a/daily/2023_12/2023_12_05.md
+++ b/daily/2023_12/2023_12_05.md
@@ -1,1 +1,8 @@
-
+**今日やったこと**<br>
+【学習時間】9時間/日<br>
+【内容】<br>
+・Docker+Fly.ioのデプロイお試し沼<br>
+・タイピング🍦<br>
+【振り返り・明日の目標】<br>
+デプロイ自体は成功して、<br>
+Dockerの開発環境、Fly.ioの本番環境の両方でRailsサーバーが起動しビューが表示されるようになった。（でもtailwindは反映されるがdaisyUIは反映されない状況）
