--- a/daily/2023_12/2023_12_06.md
+++ b/daily/2023_12/2023_12_06.md
@@ -1,1 +1,6 @@
-
+**今日やったこと**<br>
+【学習時間】8時間30分/日<br>
+【内容】<br>
+・Udemy React(v18)完全入門ガイド　セクション4、学習会<br>
+・Docker+Fly.ioのデプロイ　daisyUIが反映される環境構築<br>
+・タイピング🍦
