--- a/daily/2023_12/2023_12_08.md
+++ b/daily/2023_12/2023_12_08.md
@@ -1,1 +1,15 @@
-
+**今日やったこと**<br>
+【学習時間】8時間5分/日<br>
+【内容】<br>
+・Fly.ioカスタムドメイン設定<br>
+・トップページ・ヘッダー・フッター作成<br>
+・Map JavaScript APIの導入<br>
+・タイピング🍦<br>
+【振り返り・明日の目標】<br>
+APIキーの入った.envファイルプッシュしちゃって大反省<br>
+幸い.envの中身は新しく入れたAPIキー1行だったからすぐキー再生成した。<br>
+今GitHubサポートに機密情報にアクセスできないよう削除してもらうのにやりとり中です。<br>
+Gitの勉強不足痛感したし、前職のセーフティカンファの記憶蘇った😇<br>
+プルリクとかコミットとかあんまり見ないでマージしちゃってたから<br>
+確認するようにする。.envファイル触った後のコミットは特に<br>
+勉強になりました…
