--- a/weekly/2023_12_11w.md
+++ b/weekly/2023_12_11w.md
@@ -1,1 +1,9 @@
-
+**【先週の振り返り】**<br>
+学習：環境構築＆デプロイ、ドメイン取得＆設定、トップページの雛形、API導入まで<br>
+CREDO：Be Open<br>
+失敗したこととか学んだことtimesで垂れ流していた<br>
+**【今週の目標】**<br>
+学習：Map APIを使った投稿機能・投稿一覧ページ、できれば画像アップロードまで<br>
+CREDO：Take Ownership<br>
+**【他のRUNTEQ生に伝えたいこと・意気込みなど！】**<br>
+今年はなかなか雪積もらない
