--- a/daily/2023_12/2023_12_11.md
+++ b/daily/2023_12/2023_12_11.md
@@ -1,1 +1,9 @@
-
+**今日やったこと**<br>
+【学習時間】5時間/日<br>
+【内容】<br>
+・投稿一覧ページ作成<br>
+・Ruby<br>
+・タイピング🍦<br>
+【振り返り・明日の目標】<br>
+GitHubサポートとのやりとり終わってやっとアプリ開発に戻れたーー<br>
+リモートリポジトリの機密情報は無事消えました😭🩵
