--- a/daily/2023_12/2023_12_13.md
+++ b/daily/2023_12/2023_12_13.md
@@ -1,1 +1,12 @@
-
+**今日やったこと**<br>
+【学習時間】8時間37分/日<br>
+【内容】<br>
+・Auth0でのログイン機能<br>
+・エラーメッセージとi18n導入<br>
+・レビューしてもらったバグ修正<br>
+・Ruby<br>
+・タイピング🍦<br>
+【振り返り・明日の目標】<br>
+のぞみさんめちゃ丁寧にレビューしてくれて感謝🙇<br>
+そしてプルリク上で誰かとちゃんとやりとりするのも、<br>
+レビュー待つ間別ブランチ切って作業するのも初めてで勉強になる。
