--- a/daily/2023_12/2023_12_14.md
+++ b/daily/2023_12/2023_12_14.md
@@ -1,1 +1,8 @@
-
+**今日やったこと**<br>
+【学習時間】4時間22分/日<br>
+【内容】<br>
+・Auth0でのログイン機能のソーシャルログイン設定<br>
+【振り返り・明日の目標】<br>
+Auth0できたと思ったら開発キーでしかできてなかった<br>
+ソーシャルログインつけるには、LINEとかGoogle側でOAuthのクライアントID発行しないといけないということを知った（GCPとか、LINE Business Center）<br>
+リダイレクトURIの設定でエラー出てわかんな〜〜😇
