--- a/daily/2023_12/2023_12_16.md
+++ b/daily/2023_12/2023_12_16.md
@@ -1,1 +1,9 @@
-
+**今日やったこと**<br>
+【学習時間】6時間50分/日<br>
+【内容】<br>
+・JSとCSSと戦った<br>
+・Ruby<br>
+・タイピング🍦<br>
+【振り返り・明日の目標】<br>
+JSファイルではどうやっても環境変数読み込めなくて<br>
+結局ビューに直書きにした。
