--- a/weekly/2023_12_18w.md
+++ b/weekly/2023_12_18w.md
@@ -1,1 +1,10 @@
-
+**【先週の振り返り】**<br>
+学習：投稿のCRUD機能（Place Autocomplete）、タグ機能、ログイン（Auth0）<br>
+CREDO：Geek Out<br>
+手探りだけどアプリ開発は楽しい。<br>
+**【今週の目標】**<br>
+学習：画像投稿機能、検索機能をつけたい<br>
+CREDO：Take Ownership<br>
+早起きする<br>
+**【他のRUNTEQ生に伝えたいこと・意気込みなど！】**<br>
+作ってるアプリがCRUDアプリ寄りなので復習になってる。
