--- a/daily/2023_12/2023_12_18.md
+++ b/daily/2023_12/2023_12_18.md
@@ -4,7 +4,7 @@
 ・S3設定<br>
 ・画像アップロード機能<br>
 【振り返り・明日の目標】<br>
-今日から親知らずの手術のため2泊3日入院頑張る🦷<br>
+明日から親知らずの手術のため2泊3日入院頑張る🦷<br>
 投稿編集画面の画像プレビューのためのJSがうまく行かなくて<br>
 GPT頼りダメだな…と思ったから<br>
 JavaScriptの本読もうかな🙃
