--- a/daily/2023_12/2023_12_25.md
+++ b/daily/2023_12/2023_12_25.md
@@ -1,1 +1,8 @@
-
+**今日やったこと**<br>
+【学習時間】2時間/日<br>
+【内容】<br>
+・画像プレビュー、投稿編集時の画像関係（沼）<br>
+・タイピング🍦<br>
+【振り返り・明日の目標】<br>
+自分で望んだ手術とはいえ親知らず抜歯舐めてたこんなに痛いと思ってなかった😭<br>
+ほぼ１週間溶かしたけどこれからまた頑張る〜
