--- a/daily/2023_12/2023_12_26.md
+++ b/daily/2023_12/2023_12_26.md
@@ -1,1 +1,9 @@
-
+**今日やったこと**<br>
+【学習時間】8時間35分/日<br>
+【内容】<br>
+・画像プレビュー→解決<br>
+・画像容量の縮小が効かないエラー（未解決）<br>
+・投稿編集画面で画像を変更せず更新した時に画像が消えるエラー（未解決）<br>
+・タイピング🍦<br>
+【振り返り・明日の目標】<br>
+できなくてむかつくーーー
