--- a/daily/2023_12/2023_12_27.md
+++ b/daily/2023_12/2023_12_27.md
@@ -1,1 +1,12 @@
-
+**今日やったこと**<br>
+【学習時間】12時間/日<br>
+【内容】<br>
+・ActiveStorageやめてCarrierwaveに変更<br>
+・画像容量の圧縮、投稿編集画面で画像を変更せず更新した時に画像が消えないように→解決<br>
+・本番環境でS3に画像アップロードできた<br>
+・検索機能<br>
+・マイページのビュー雛形（着手）<br>
+・タイピング🍦<br>
+【振り返り・明日の目標】<br>
+長かった画像関係がやっと終わった<br>
+Carrierwaveに変えた瞬間いろんな問題が解決した🫠🙏🏻
