--- a/daily/2023_12/2023_12_30.md
+++ b/daily/2023_12/2023_12_30.md
@@ -1,1 +1,9 @@
-
+**今日やったこと**<br>
+【学習時間】10時間/日<br>
+【内容】<br>
+・道外から北海道までの移動方法提案機能（苦戦）<br>
+・UI（ロゴ・favicon・フォント・文言の修正）<br>
+・細々（Google Analytics、cron-job、お問い合わせ）<br>
+・タイピング🍦<br>
+【振り返り・明日の目標】<br>
+JSわからなくて逃げて他のことしてた〜
