--- a/daily/2023_12/2023_12_31.md
+++ b/daily/2023_12/2023_12_31.md
@@ -1,1 +1,9 @@
+**今日やったこと**<br>
+【学習時間】1時間54分/日<br>
+【内容】<br>
+・アバター機能<br>
+・タイピング🍦<br>
+【振り返り・明日の目標】<br>
+4月からRUNTEQに入り、今年は大変お世話になりました。<br>
+来年もよろしくお願いします🌅<br>
 985 contributions in 2023
