--- a/monthly/2024_01.md
+++ b/monthly/2024_01.md
@@ -1,7 +1,10 @@
-**【12月の学習時間】**
-166時間53分/月
-計：889時間14分
-
-**【12月の振り返り】**
-
-**【1月の目標】**
+**【12月の学習時間】**<br>
+166時間53分/月<br>
+計：889時間14分<br>
+<br>
+**【12月の振り返り】**<br>
+12月頭ごろから始めたアプリ開発にすでにこんなに時間がかかっている🫨<br>
+Rails基礎でやった機能でもいちから自分で作るの大変だった<br>
+<br>
+**【1月の目標】**<br>
+今月中にアプリリリースできるように頑張る🎍🐉
