--- a/development_community/2024_01_01w.md
+++ b/development_community/2024_01_01w.md
@@ -1,15 +1,23 @@
 **【先週終わったタスク】**
-・画像アップロード機能
-・検索機能
-・マイページ機能
-・北海道の距離感計算機能
+・画像アップロード
+・検索
+・マイページ
+・プロフィール編集
+・北海道の距離感計算機
+・道外から北海道までの移動方法提案（沼）
+・フォントやfaviconなどの細々した修正
+
 **【今週終わらせる予定のタスク】**
+・道外から北海道までの移動方法提案機能完成
 ・投稿フォームで画像を添付した後に他の部分でエラーになった際、選択していた画像のデータが保持されるようにする
+・技術面談開始まで、MVPリリース後に実装しようとしていたできること色々やる
+
 **【ISSUEが全部で何個で残り何個】**
-全部：00（MVPまで：00）
-残り：00（MVPまで：00）
+全部：115
+残り：45
 **【MVPリリース予定日】**
 1月8日
 **【GitHub URL】**
 https://github.com/satou-haruka-37/hokkaido_travel
 **【共有事項などあれば】**
+ :issyoniganbaru: 
