--- a/development_community/2024_01_01w.md
+++ b/development_community/2024_01_01w.md
@@ -1,23 +1,23 @@
-**【先週終わったタスク】**
-・画像アップロード
-・検索
-・マイページ
-・プロフィール編集
-・北海道の距離感計算機
-・道外から北海道までの移動方法提案（沼）
-・フォントやfaviconなどの細々した修正
-
-**【今週終わらせる予定のタスク】**
-・道外から北海道までの移動方法提案機能完成
-・投稿フォームで画像を添付した後に他の部分でエラーになった際、選択していた画像のデータが保持されるようにする
-・技術面談開始まで、MVPリリース後に実装しようとしていたできること色々やる
-
-**【ISSUEが全部で何個で残り何個】**
-全部：115
-残り：45
-**【MVPリリース予定日】**
-1月8日
-**【GitHub URL】**
-https://github.com/satou-haruka-37/hokkaido_travel
-**【共有事項などあれば】**
+**【先週終わったタスク】**<br>
+・画像アップロード<br>
+・検索<br>
+・マイページ<br>
+・プロフィール編集<br>
+・北海道の距離感計算機<br>
+・道外から北海道までの移動方法提案（沼）<br>
+・フォントやfaviconなどの細々した修正<br>
+<br>
+**【今週終わらせる予定のタスク】**<br>
+・道外から北海道までの移動方法提案機能完成<br>
+・投稿フォームで画像を添付した後に他の部分でエラーになった際、選択していた画像のデータが保持されるようにする<br>
+・技術面談開始まで、MVPリリース後に実装しようとしていたできること色々やる<br>
+<br>
+**【ISSUEが全部で何個で残り何個】**<br>
+全部：115<br>
+残り：45<br>
+**【MVPリリース予定日】**<br>
+1月8日<br>
+**【GitHub URL】**<br>
+https://github.com/satou-haruka-37/hokkaido_travel<br>
+**【共有事項などあれば】**<br>
  :issyoniganbaru: 
