--- a/weekly/2024_01_01w.md
+++ b/weekly/2024_01_01w.md
@@ -1,1 +1,9 @@
-
+**【先週の振り返り】**<br>
+学習：画像アップロード、検索、マイページ、プロフィール編集、北海道の距離感計算<br>
+CREDO：Geek Out<br>
+**【今週の目標】**<br>
+学習：道外から北海道までの移動方法提案、エラーの修正<br>
+詰まっている機能があるため、技術面談開始まで他の機能で実装できるもの進めてしまう<br>
+CREDO：Take Ownership<br>
+**【他のRUNTEQ生に伝えたいこと・意気込みなど！】**<br>
+明けましておめでとうございます🎍
