--- a/daily/2024_01/2023_01_02.md
+++ b/daily/2024_01/2023_01_02.md
@@ -1,1 +1,8 @@
-
+**今日やったこと**<br>
+【学習時間】5時間40分/日<br>
+【内容】<br>
+・管理者権限（flyctl consoleで普通に付与できた）<br>
+・ユーザーが退会しても投稿が残る<br>
+・ページネーション<br>
+・投稿一覧 / マーカーの色をタグごとに変える<br>
+・タイピング🍦
