--- a/daily/2024_01/2023_01_03.md
+++ b/daily/2024_01/2023_01_03.md
@@ -1,1 +1,11 @@
-
+**今日やったこと**<br>
+【学習時間】4時間45分/日<br>
+【内容】<br>
+・不適切な画像のフィルタリング<br>
+・投稿詳細 / 道民用スポットまでの移動時間<br>
+・投稿詳細 / おすすめの付近の投稿（着手）<br>
+・タイピング🍦<br>
+【振り返り・明日の目標】<br>
+GPT3.5とロボらんてくん(GPT4)違いすぎて感動した<br>
+残ってる詰まってるところは全部JS<br>
+良い加減まとまって勉強しないとなと思ってはいます🫠
