--- a/daily/2024_01/2023_01_04.md
+++ b/daily/2024_01/2023_01_04.md
@@ -1,1 +1,8 @@
-
+**今日やったこと**<br>
+【学習時間】8時間/日<br>
+【内容】<br>
+・ずっとUI調整<br>
+・タイピング🍦<br>
+【振り返り・明日の目標】<br>
+夫の昔のiphoneとかipadとかsafariとかChromeとか比べたら媒体によって色々見た目違う🫥<br>
+safariだと動作しないJSある、明日やる🫥
