--- a/daily/2024_01/2023_01_05.md
+++ b/daily/2024_01/2023_01_05.md
@@ -1,1 +1,10 @@
-
+**今日やったこと**<br>
+【学習時間】10時間25分/日<br>
+【内容】<br>
+・UI・色々細々調整<br>
+・道外から北海道までの移動方法提案機能（簡易的な方法）<br>
+・トップページ<br>
+・タイピング🍦<br>
+【振り返り・明日の目標】<br>
+Google Map APIで日本の公共交通機関の検索はできないらしい。<br>
+本リリース前に他のAPIで実装できそうだったらしてみるけどとりあえずは簡易的な方法にした🥹
