--- a/daily/2024_01/2023_01_07.md
+++ b/daily/2024_01/2023_01_07.md
@@ -1,1 +1,5 @@
-
+**今日やったこと**<br>
+【学習時間】12時間/日<br>
+【内容】<br>
+・細かい機能改善・修正・意見反映<br>
+・フレンドリーフォワーディングと、一覧で一気に取得じゃなくてモーダル開くときに投稿の遅延ロードについて調べて格闘（実装は未、後に回した）
