--- a/weekly/2024_01_08w.md
+++ b/weekly/2024_01_08w.md
@@ -1,1 +1,9 @@
-
+**【先週の振り返り】**<br>
+学習：お気に入り、観光時期テーブル追加、気温表示、服装提案雛形、管理者権限、<br>
+不適切な画像フィルタリング、道民用スポットまでの移動時間、UI調整など<br>
+CREDO：Geek Out<br>
+**【今週の目標】**<br>
+学習：投稿詳細で近くのスポット表示機能、導線や細かいエラーの修正や機能改善、UI修正など<br>
+CREDO：Take Ownership<br>
+**【他のRUNTEQ生に伝えたいこと・意気込みなど！】**<br>
+後少しリリースまで突っ走るー！
