--- a/development_community/2024_01_08w.md
+++ b/development_community/2024_01_08w.md
@@ -1,1 +1,34 @@
-
+**【先週終わったタスク】**<br>
+・お気に入り機能（非同期は未）<br>
+・観光時期の追加<br>
+・ヘッダーに北海道の気温の表示<br>
+・服装提案機能（雛形）<br>
+・管理者権限<br>
+・ユーザーが退会しても投稿が残る<br>
+・ページネーション<br>
+・投稿一覧 / マーカーの色をタグごとに変える<br>
+・不適切な画像のフィルタリング<br>
+・投稿詳細 / 道民用スポットまでの移動時間<br>
+・UI調整<br>
+・投稿一覧→投稿詳細の間にモーダル<br>
+・細かい機能改善・修正・意見反映<br>
+<br>
+**【今週終わらせる予定のタスク】**<br>
+・投稿詳細 / 近くのスポット表示<br>
+・新規投稿→ログイン前ならログイン画面に行くように導線少し調整<br>
+・投稿送信時にローディングのアニメーション、それでも待つのが長くてストレスだったらCloud Vision API消す<br>
+・お気に入りボタン連打でエラーページの修正、エラーページのカスタマイズ<br>
+・存在しないURLにアクセスでトップページに遷移するようにしたい<br>
+・服装提案機能しっかり作る<br>
+・他、機能改善や意見反映など<br>
+<br>
+**【ISSUEが全部で何個で残り何個】**<br>
+全部：155<br>
+残り：40<br>
+**【MVPリリース予定日】**<br>
+1月11日<br>
+**【GitHub URL】**<br>
+[https://github.com/satou-haruka-37/hokkaido\_travel](https://github.com/satou-haruka-37/hokkaido_travel)<br>  
+**【共有事項などあれば】**<br>
+ある程度機能実装できたので同期に触ってもらったら、たくさんデバッグしてもらって改善するところがたくさん出てきたので修正します。<br>
+ありがたいです🙏🏻
