--- a/daily/2024_01/2023_01_08.md
+++ b/daily/2024_01/2023_01_08.md
@@ -1,1 +1,10 @@
-
+**今日やったこと**<br>
+【学習時間】11時間27分/日<br>
+【内容】<br>
+・機能改善、バグの対策と修正（エラーページなど）<br>
+・近くのおすすめスポット表示機能<br>
+・服装の提案機能の中身と、天気追加（着手）<br>
+・タイピング🍦<br>
+【振り返り・明日の目標】<br>
+無理やり力づくで作ってるのばっかりでリファクタリング山盛り後回しだし<br>
+後で綻びが出ないか心配🫠
