--- a/daily/2024_01/2023_01_09.md
+++ b/daily/2024_01/2023_01_09.md
@@ -1,7 +1,7 @@
 **今日やったこと**<br>
-【学習時間】5時間30分/日<br>
+【学習時間】6時間11分/日<br>
 【内容】<br>
-・服装の提案機能の中身と、天気追加（途中）<br>
+・服装の提案機能の中身と、天気追加　など<br>
 【振り返り・明日の目標】<br>
 天気と気温の組み合わせた分岐が無理くりだけどできた<br>
 細かい文言の修正は後日
