--- a/daily/2024_01/2023_01_10.md
+++ b/daily/2024_01/2023_01_10.md
@@ -1,1 +1,8 @@
-
+**今日やったこと**<br>
+【学習時間】12時間30分/日<br>
+【内容】<br>
+・地域（道央・道南・道北・道東）ごとのフォーカス機能<br>
+・おすすめコメントの入力欄が長文時伸びるように<br>
+・SNSシェア機能、動的OGP<br>
+・PWAアプリ化（親戚の要望）<br>
+・他細かい修正色々
