--- a/daily/2024_01/2023_01_11.md
+++ b/daily/2024_01/2023_01_11.md
@@ -1,1 +1,11 @@
-
+**今日やったこと**<br>
+【学習時間】4時間30分くらい/日<br>
+【内容】<br>
+・一個前のリリース後改善メモのこと色々<br>
+・初期データ用意（勉強時間に含まない）<br>
+【振り返り・明日の目標】<br>
+インスタに投げたら全然連絡とってなかったけど繋がってた高校の時の同級生とかにも投稿してもらえたり、<br>
+全然エンジニア関係ない人ばっかりで、<br>
+え、アプリ作ったってどゆこと？！とか言われたりして、<br>
+こっちからお願いしたとはいえど、人に使ってもらえるっていうのが嬉しかった🙌🏻<br>
+そして告知後にエラー出たら焦った😂
