--- a/development_community/2024_01_12w.md
+++ b/development_community/2024_01_12w.md
@@ -1,1 +1,27 @@
-
+**【先週終わったタスク】**<br>
+1/8〜1/12の内容です🙇<br>
+<br>
+・投稿詳細 / 近くのスポット表示<br>
+・フレンドリーフォワーディング風の実装<br>
+・投稿送信時にローディングのアニメーションと二重送信防止<br>
+・お気に入りボタン連打対策<br>
+・存在しないURLにアクセスでトップページに遷移<br>
+・服装の提案機能に天気も追加<br>
+・エラーページカスタマイズ<br>
+・地域（道央・道南・道北・道東）ごとのフォーカス機能<br>
+・SNSシェア機能、動的OGP<br>
+・PWAアプリ化（親戚の要望）<br>
+・他細かい機能改善・UI修正・意見反映<br>
+<br>
+**【今週終わらせる予定のタスク】**<br>
+・地元の友人・知人・親族に初期データの投稿をしてもらう<br>
+・一旦別の勉強をします。1/19〜本リリースに向けて残りの機能追加など細かい調整します<br>
+**【ISSUEが全部で何個で残り何個】**<br>
+全部：169<br>
+残り：30<br>
+**【MVPリリース予定日】**<br>
+1月11日に地元の知人限定でMVPリリースしました🥳<br>
+**【GitHub URL】**<br>
+https://github.com/satou-haruka-37/hokkaido\_travel<br>
+**【共有事項などあれば】**<br>
+今まで毎週月曜に報告と勘違いしてました🙇
