--- a/daily/2024_01/2023_01_12.md
+++ b/daily/2024_01/2023_01_12.md
@@ -1,1 +1,8 @@
-
+**今日やったこと**<br>
+【学習時間】2時間45分/日<br>
+【内容】<br>
+・[attr_accessor・ゲッター・セッターについて勉強、記事書いた](https://qiita.com/lemonade_37/items/6a815e48e9eecc5c0df7)<br>
+・Google API使用のためのプライバシーポリシーちょっと追加、Googleに再提出<br>
+・タイピング🍦<br>
+【振り返り・明日の目標】<br>
+ユーザ−100人まで行かないとは思うけど、一応本番利用の申請中
