--- a/weekly/2024_01_15w.md
+++ b/weekly/2024_01_15w.md
@@ -1,9 +1,9 @@
-**【先週の振り返り】**
-学習：近くのおすすめスポット表示、フレンドリーフォワーディング風、服装の提案機能に天気追加、地域（道央・道南・道北・道東）ごとのフォーカス機能、SNSシェア機能、動的OGP、PWAアプリ化（親戚の要望）
-他細かい機能改善（バグ対策など）・UI修正など
-CREDO：Take Ownership
-**【今週の目標】**
-学習：Rubyの勉強、本リリースに向けて機能追加
-CREDO：Take Ownership
-**【他のRUNTEQ生に伝えたいこと・意気込みなど！】**
+**【先週の振り返り】**<br>
+学習：近くのおすすめスポット表示、フレンドリーフォワーディング風、服装の提案機能に天気追加、地域（道央・道南・道北・道東）ごとのフォーカス機能、SNSシェア機能、動的OGP、PWAアプリ化（親戚の要望）<br>
+他細かい機能改善（バグ対策など）・UI修正など<br>
+CREDO：Take Ownership<br>
+**【今週の目標】**<br>
+学習：Rubyの勉強、本リリースに向けて機能追加<br>
+CREDO：Take Ownership<br>
+**【他のRUNTEQ生に伝えたいこと・意気込みなど！】**<br>
 🔥
