--- a/daily/2024_01/2024_01_16.md
+++ b/daily/2024_01/2024_01_16.md
@@ -1,1 +1,11 @@
-
+**今日やったこと**<br>
+【学習時間】12時間/日<br>
+【内容】<br>
+・アプリ開発（初回ログイン時のみモーダルでプロフィール設定促し、開発者からのお知らせページ、他細かい機能改善と要望実装）<br>
+【振り返り・明日の目標】<br>
+色々拘ってる割に、絶対気づかないってレベルの改善すぎて就活時に気づかれない説🫠<br>
+（無いと、え？ってなるけど、あったら当たり前すぎて気づかない感じのこと）<br>
+<br>
+色んな方々のUI見てたら凄すぎて🥹✨<br>
+色々細かい動作よりUIの方が絶対要改善だけど、CSSは中央揃えとかカードから文字はみ出さないとかで必死なレベルなのでもう諦め。。。🫠<br>
+UI勉強して、今後作るアプリではもっといい見た目のもの作れるようになりたい💭
