--- a/daily/2024_01/2024_01_16.md
+++ b/daily/2024_01/2024_01_16.md
@@ -7,5 +7,6 @@
 （無いと、え？ってなるけど、あったら当たり前すぎて気づかない感じのこと）<br>
 <br>
 色んな方々のUI見てたら凄すぎて🥹✨<br>
-色々細かい動作よりUIの方が絶対要改善だけど、CSSは中央揃えとかカードから文字はみ出さないとかで必死なレベルなのでもう諦め。。。🫠<br>
+色々細かい動作よりUIの方が絶対要改善だけど、CSSは中央揃えとかカードから文字はみ出さないとかで必死なレベルなのでもう諦めて、<br>
+冬の北海道イメージのシンプルなデザインだということにする🤣<br>
 UI勉強して、今後作るアプリではもっといい見た目のもの作れるようになりたい💭
