--- a/daily/2024_01/2024_01_17.md
+++ b/daily/2024_01/2024_01_17.md
@@ -1,1 +1,9 @@
-
+**今日やったこと**<br>
+【学習時間】（5時間30分）/日（ほぼ絵いてたので勉強に含まない）<br>
+【内容】<br>
+・見た目微調整<br>
+・服装の提案機能のイラスト入れて文章も推敲<br>
+・初期データ追加<br>
+【振り返り・明日の目標】<br>
+初期データ集めもうちょっと待ってみて（＆自分でも増やしてみて）<br>
+20日にリリースの告知しようと思う！！！！
