--- a/daily/2024_01/2024_01_18.md
+++ b/daily/2024_01/2024_01_18.md
@@ -1,1 +1,9 @@
-
+**今日やったこと**<br>
+【学習時間】10時間位/日<br>
+【内容】<br>
+・細かい機能改善<br>
+・新着の投稿ページ作成<br>
+・リファクタリングしようとした（Lintチェック簡単なもののみ済）<br>
+【振り返り・明日の目標】<br>
+リファクタリング後に回したら全然どこから手をつけたらいいか状態😇<br>
+これから少しずつ頑張る〜
