--- a/weekly/2024_01_22w.md
+++ b/weekly/2024_01_22w.md
@@ -1,1 +1,10 @@
-
+**【先週の振り返り】**<br>
+学習：初回ログイン時のみモーダルでプロフィール設定促し、開発者からのお知らせページ、新着の投稿ページ、服装の提案機能完成、他色々意見反映など改善<br>
+Ruby学習<br>
+CREDO：Geek Out<br>
+**【今週の目標】**<br>
+学習：Rubyの勉強、早起き<br>
+CREDO：Take Ownership<br>
+**【他のRUNTEQ生に伝えたいこと・意気込みなど！】**<br>
+アプリ本リリースしました！🥳アプリを触ってくださった方はありがとうございます🙇<br>
+就活準備や資格勉強頑張るぞー😵
