--- a/weekly/2024_01_22w.md
+++ b/weekly/2024_01_22w.md
@@ -6,5 +6,5 @@ CREDO：Geek Out<br>
 学習：Rubyの勉強、早起き<br>
 CREDO：Take Ownership<br>
 **【他のRUNTEQ生に伝えたいこと・意気込みなど！】**<br>
-アプリ本リリースしました！🥳アプリを触ってくださった方はありがとうございます🙇<br>
+アプリ本リリースしました！🥳<br>
 就活準備や資格勉強頑張るぞー😵
