--- a/weekly/2024_01_29w.md
+++ b/weekly/2024_01_29w.md
@@ -6,4 +6,4 @@ CREDO：Take Ownership<br>
 CREDO：Take Ownership<br>
 **【他のRUNTEQ生に伝えたいこと・意気込みなど！】**<br>
 月曜日書くの忘れてたけどみんな卒業してから書かなそう<br>
-だけど自分の振り返りとして使ってたのでこっちに書く
+だけど自分の振り返りとして使ってたのでこっちに書く（自分個人のtimes）
