--- a/monthly/2024_02.md
+++ b/monthly/2024_02.md
@@ -1,1 +1,14 @@
-
+**【1月の学習時間】**<br>
+159時間45分/月<br>
+計：1048時間59分<br>
+🥳1000時間達成できた<br>
+<br>
+**【1月の振り返り】**<br>
+目標だったアプリリリースは達成<br>
+相変わらずやる時とやらない時の差がありすぎなので<br>
+アプリ開発もひと段落だし、規則正しい生活にしたい<br>
+<br>
+**【2月の目標】**<br>
+- 朝早起き、規則的な生活に近づける<br>
+- 毎日面接練習<br>
+- リファクタリングとテストコード
