--- a/daily/2024_02/2024_02_02.md
+++ b/daily/2024_02/2024_02_02.md
@@ -1,1 +1,12 @@
-
+**今日やったこと**<br>
+【学習時間】1時間/日<br>
+【内容】<br>
+・スラスラわかるJavaScript<br>
+・タイピング🍦<br>
+<br>
+↓学習外↓<br>
+・履歴書LGTM<br>
+・職務経歴書提出<br>
+【振り返り・明日の目標】<br>
+とっても素敵な会社のカジュ面で色々失敗してしまって<br>
+コミュ力を上げたい面接の練習しなきゃやばいと感じた１日😨
