--- a/weekly/2024_02_05w.md
+++ b/weekly/2024_02_05w.md
@@ -1,6 +1,6 @@
 **【先週の振り返り】**<br>
-学習：JS学習途中、リファクタリング着手、アプリ開発の技術記事<br>
-学習以外：自己分析・履歴書・職務経歴書・LT会・note作成<br>
+学習：Rubysilver受験、JS学習途中、リファクタリング着手、アプリ開発の技術記事<br>
+学習以外：自己分析・履歴書・職務経歴書・LT登壇・note作成<br>
 CREDO：Take Ownership<br>
 朝起きて1時間読書再開、早起きできるようになってきた<br>
 **【今週の目標】**<br>
