--- a/daily/2024_02/2024_02_06.md
+++ b/daily/2024_02/2024_02_06.md
@@ -1,1 +1,9 @@
-
+**今日やったこと**<br>
+【学習時間】1時間15分/日<br>
+【内容】<br>
+・スラスラわかるJavaScript  11章-5まで（ハンズオン）<br>
+・タイピング🍦<br>
+【振り返り・明日の目標】<br>
+予定や私生活のタスク消化できてるからヨシ<br>
+としたいがこれからはバランスとった上で<br>
+ちゃんと学習時間確保できるようになるぞ。🔥
