--- a/daily/2024_02/2024_02_07.md
+++ b/daily/2024_02/2024_02_07.md
@@ -1,1 +1,9 @@
-
+**今日やったこと**<br>
+【学習時間】1時間/日<br>
+【内容】<br>
+・スラスラわかるJavaScript  12章-2まで（ハンズオン）<br>
+・タイピング🍦<br>
+<br>
+↓学習外↓<br>
+・GitHub整理＆GitHubプロフィール整えた<br>
+・Wantedlyとかプロフィール系整えた
