--- a/daily/2024_02/2024_02_06.md
+++ b/daily/2024_02/2024_02_06.md
@@ -3,6 +3,9 @@
 【内容】<br>
 ・スラスラわかるJavaScript  11章-5まで（ハンズオン）<br>
 ・タイピング🍦<br>
+<br>
+↓学習外↓<br>
+・職務経歴書LGTM<br>
 【振り返り・明日の目標】<br>
 予定や私生活のタスク消化できてるからヨシ<br>
 としたいがこれからはバランスとった上で<br>
