--- a/daily/2024_02/2024_02_08.md
+++ b/daily/2024_02/2024_02_08.md
@@ -1,1 +1,9 @@
-
+**今日やったこと**<br>
+【学習時間】4時間40分/日<br>
+【内容】<br>
+・スラスラわかるJavaScript  12章-3〜読了（ハンズオン）<br>
+・タイピング🍦<br>
+【振り返り・明日の目標】<br>
+JSのkeyupイベントとかmouseイベントとか学んで<br>
+こんなことできるんだ〜と感動した（今更）<br>
+fetch、then、awaitあたりで分からんくなった🤯
