--- a/daily/2024_02/2024_02_11.md
+++ b/daily/2024_02/2024_02_11.md
@@ -1,1 +1,9 @@
-
+**今日やったこと**<br>
+【学習時間】6時間20分/日<br>
+【内容】<br>
+・情熱プログラマー読了<br>
+・新人プログラマーのエラーが怖くなくなる本読了<br>
+・ERBにあるJSのコードをJSファイルに移す（途中）<br>
+・タイピング🍦<br>
+【振り返り・明日の目標】<br>
+JSファイルに移したら今までERBでやってたAPIキーの埋め込みがうまくいかなーいー
