--- a/weekly/2024_02_12w.md
+++ b/weekly/2024_02_12w.md
@@ -1,1 +1,9 @@
-
+**【先週の振り返り】**<br>
+学習：本読んだ、JS学習、ERBにあるJSのコードをJSファイルに移す（途中）<br>
+学習以外：GitHubプロフィールとか整えた<br>
+CREDO：Take Ownership<br>
+早寝早起き割と継続できてる<br>
+**【今週の目標】**<br>
+学習：JSファイル整理を終わらせたい、Hotwire練習のため何かアプリ作りたい<br>
+CREDO：Take Ownership<br>
+早起き継続、時間決めて勉強する
