--- a/daily/2024_02/2024_02_12.md
+++ b/daily/2024_02/2024_02_12.md
@@ -1,1 +1,10 @@
-
+**今日やったこと**<br>
+【学習時間】7時間/日<br>
+【内容】<br>
+・仮想化＆コンテナがこれ1冊でしっかりわかる教科書　読了<br>
+・ERBにあるJSのコードをJSファイルに移す（途中）<br>
+・タイピング🍦<br>
+【振り返り・明日の目標】<br>
+APIキーのscriptタグだけERBに残して、ロジックの方のJSコードだけJSファイルに移動したらできた。<br>
+あとはERBのscriptタグだからってRubyとJS混ぜて作ってたところだけど、コード自体修正しないといけなくて🫠<br>
+仮想化の本は難しくてあまりわからなかったのでいつかまた読む📗
