--- a/daily/2024_02/2024_02_14.md
+++ b/daily/2024_02/2024_02_14.md
@@ -1,1 +1,8 @@
-
+**今日やったこと**<br>
+【学習時間】7時間20分/日<br>
+【内容】<br>
+・世界一流エンジニアの思考法 45%まで<br>
+・Ruby Silverのノートzennスクラップに書き移し<br>
+・タイピング🍦<br>
+【振り返り・明日の目標】<br>
+アナログノートに書いてたやつ記事に書き移してただけ
