--- a/daily/2024_02/2024_02_13.md
+++ b/daily/2024_02/2024_02_13.md
@@ -1,1 +1,8 @@
-
+**昨日やったこと**<br>
+【学習時間】30分/日<br>
+【内容】<br>
+・[猫でもわかるHotwire](https://zenn.dev/shita1112/books/cat-hotwire-turbo) (読み物のところまで)<br>
+・世界一流エンジニアの思考法 10%<br>
+【振り返り・明日の目標】<br>
+たぶん食あたりで、熱出た<br>
+早くなおれ〜
