--- a/daily/2024_02/2024_02_16.md
+++ b/daily/2024_02/2024_02_16.md
@@ -1,1 +1,6 @@
-
+**今日やったこと**<br>
+【学習時間】3時間/日<br>
+【内容】<br>
+・[猫でもわかるHotwire](https://zenn.dev/shita1112/books/cat-hotwire-turbo) (ハンズオン)　チュートリアル1まで<br>
+・タイピング🍦<br>
+・他色々
