--- a/daily/2024_02/2024_02_18.md
+++ b/daily/2024_02/2024_02_18.md
@@ -1,1 +1,9 @@
-
+**今日やったこと**<br>
+【学習時間】7時間32分/日<br>
+【内容】<br>
+・世界一流エンジニアの思考法　読了<br>
+・猫でもわかるHotwire　読了<br>
+・Stimulus練習用のミニアプリ作成中<br>
+・タイピング🍦<br>
+【振り返り・明日の目標】<br>
+Stimulus練習でアプリ作ってるのにBootstrapとまあまあ格闘した🤤
